fix layout issues on small screens

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -15,7 +15,7 @@
 
 .card--grid {
   display: grid;
-  grid-template-rows: repeat(auto, 3);
+  // grid-template-rows: repeat(auto, 3);
   grid-gap: 2px;
   background-color: $main-grid-gap;
   padding: 0;
@@ -41,7 +41,9 @@
 }
 
 .card__grid-item--colors {
-  padding: 0 2.62em 2em;
+  @media (min-width: 768px) {
+    padding: 0 2.62em 2em;
+  }
 }
 
 .tooltip {
@@ -68,10 +70,11 @@
     cursor: pointer;
     height: 84px;
     border-radius: 4px;
-    width: 105px;
+    max-width: 105px;
     position: relative;
     margin: .5em;
     background-color: $shade;
+    flex: 1 20%;
   }
 }
 
@@ -81,7 +84,7 @@
     height: 84px;
     border-radius: 4px;
     margin: .5em 0;
-    width: 390px;
+    max-width: 390px;
     flex: 0 1 31%;
     position: relative;
     background-color: $color;
@@ -93,10 +96,11 @@
     cursor: pointer;
     height: 84px;
     border-radius: 4px;
-    width: 150px;
+    max-width: 150px;
     position: relative;
     margin: .5em;
     background-color: $color;
+    flex: 0 1 20%;
   }
 }
 
@@ -105,9 +109,10 @@
     cursor: pointer;
     height: 84px;
     border-radius: 4px;
-    width: 185px;
+    max-width: 185px;
     position: relative;
     margin: .5em;
+    flex: 0 1 25%;
     background-color: $color;
     @if $index == 6 {
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
@@ -123,12 +128,14 @@
 .typography__rubik,
 .typography__fjalla-one {
   flex: 1 50%;
-  min-width: 430px;
   display: grid;
-  grid-template-columns: 85px auto;
+  grid-template-columns: 85px;
   grid-template-rows: 60px 44px 40px;
   padding: 0 1em 2em;
   // padding-bottom: 2em;
+  @media (min-width: 768px) {
+    min-width: 430px;
+  }
 }
 
 .rubik__header,
